# videoplayer-dx11-win32

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/decoder/: ffmpeg_decoder.hpp
include/renderer/: d3d11_renderer.hpp
include/ui/: player_ui.hpp
scripts/: build.ps1
src/: main.cpp
src/decoder/: ffmpeg_decoder.cpp
src/renderer/: d3d11_renderer.cpp
src/ui/: player_ui.cpp
